pipeline/gitlab-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: gitlab-service
spec:
  selector:
    app: gitlab
  ports:
  - port: 80
    targetPort: 80
  type: LoadBalancer
