pipeline/pipeline-ingress-controller.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pipeline-ingress-controller-prefix
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /

spec:
  ingressClassName: gitlab
  rules:
  - http:
      paths:
      - path: /blue
        pathType: Prefix
        backend:
          service:
            name: web-blue
            port:
              number: 80
      - path: /green
        pathType: Prefix
        backend:
          service:
            name: web-green
            port:
              number: 80              
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pipeline-ingress-controller-dominio
spec:
  ingressClassName: nginx
  rules:
  - host: blue.genilsoncruz.com.br
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: web-blue
            port:
              number: 80
  - host: green.genilsoncruz.com.br
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: web-green
            port:
              number: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pipeline-ingress-controller-default
spec:
  ingressClassName: nginx
  defaultBackend:
    service:
      name: nginx
      port:
        number: 80
